--- a/TopPlaces/Info.plist
+++ b/TopPlaces/Info.plist
@@ -23,7 +23,9 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>Main_iphone</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>Main_ipad</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
